--- a/roles/keycloak/defaults/main.yml
+++ b/roles/keycloak/defaults/main.yml
@@ -1,19 +1,24 @@
 ---
-## Option 1: Define a git url and branch - comment to disable
-#keycloak_git: "https://github.com/eosc-kc/keycloak.git"
-#keycloak_branch: "stage"
-
-## Option 2: Define a keycloak release (tar.gz) url - comment to disable
+# if the keycloak archive is from the "stage" branch, then you might enable the wayf plugin (keycloak-theme-vanilla)
 keycloak_archive_url: "https://github.com/keycloak/keycloak/releases/download/13.0.0/keycloak-13.0.0.tar.gz"
-
 
 ##in format X.Y.Z
 keycloak_version: "13.0.0"
 
-keycloak_admin_username: "<set an admin user>"
-keycloak_admin_password: "<set his pass>"
+keycloak_admin_username: "<SET A USER>"
+keycloak_admin_password: "<SET A PASS>"
 
+db_user: "<DB USER>"
+db_password: "<DB PASS>"
+db_name: "<DB NAME>"
 
-db_user: "user"
-db_password: "pass"
-db_name: "keycloak"
+### plugins
+### wayf plugin works ONLY with branch "stage" of keycloak (need to have commit fe055820980dbcb79d5aae2b4dce78b840b912b0)
+wayf:
+  enabled: true
+  name: "keycloak-theme-vanilla"
+  jar_url: "<location of plugin jar>"
+  modulexml_url: "https://raw.githubusercontent.com/eosc-kc/keycloak-theme-vanilla/master/module.xml"
+  add_to_realms:
+    - "master"
+
