--- a/roles/keycloak/tasks/main.yml
+++ b/roles/keycloak/tasks/main.yml
@@ -22,6 +22,12 @@
 
 #### Extract keycloak from archive
 
+- name: Create keycloak directory
+  file:
+    path: "/tmp/keycloak-tmp"
+    state: directory
+  tags: "download_extract"
+
 - name: Download keycloak archive file
   get_url:
     url: "{{keycloak_archive_url}}"
@@ -31,12 +37,21 @@
 - name: unpack keycloak
   unarchive:
     src: "/tmp/keycloak_archive"
-    dest: "/tmp/"
+    dest: "/tmp/keycloak-tmp"
     copy: no
   tags: "download_extract"
 
-- name: Rename keycloak folder
-  command: "mv /tmp/keycloak-{{keycloak_version}} {{keycloak_home}}"
+- name: Find keycloak extracted folder name
+  find:
+    paths: /tmp/keycloak-tmp
+    patterns: 'keycloak*'
+    file_type: directory
+    recurse: no
+  register: find_result
+  tags: "download_extract"
+
+- name: Move extracted keycloak to final keycloak folder
+  command: "mv {{find_result.files[0].path}} {{keycloak_home}}"
   tags: "download_extract"
 
 ######## Create postgresql plugin
@@ -107,3 +122,20 @@
     state: restarted
   become: yes
   tags: "setup_sys_service"
+
+### install other plugins
+
+- name: Install other plugins
+  import_tasks: "install_plugins.yml"
+  tags: "plugins"
+  notify:
+    - Restart keycloak
+
+
+##### configure keycloak
+
+- name: Configure various keycloak aspects
+  import_tasks: "configure_keycloak.yml"
+  tags: "configure"
+  notify:
+    - Restart keycloak
