--- a/roles/keycloak/tasks/install_plugins.yml
+++ b/roles/keycloak/tasks/install_plugins.yml
@@ -29,7 +29,7 @@
         srv: urn:jboss:domain:16.0
         sub: urn:jboss:domain:keycloak-server:1.1
 
-  - name: Setup keycloak xml modules
+  - name: Setup keycloak xml theme modules
     xml:
       path: "{{keycloak_home}}/standalone/configuration/standalone-ha.xml"
       xpath: /srv:server/srv:profile/sub:subsystem/sub:theme
@@ -41,6 +41,41 @@
         sub: urn:jboss:domain:keycloak-server:1.1
   when: "{{wayf.enabled}} == true"
   tags: "wayf_plugin"
+
+
+## hashed IdP id mapper
+- name: Install IdP hash id plugin
+  block:
+    - name: Create idp hash id plugin dir with parent directories
+      file:
+        path: "{{keycloak_home}}/modules/system/layers/keycloak/org/keycloak/{{ idp_hashedid_mapper.name }}/main"
+        state: directory
+
+    - name: Download idp hash id plugin jar
+      get_url:
+        url: "{{ idp_hashedid_mapper.jar_url }}"
+        dest: "{{keycloak_home}}/modules/system/layers/keycloak/org/keycloak/{{ idp_hashedid_mapper.name }}/main/"
+
+    - name: Install module.xml
+      get_url:
+        url: "{{ idp_hashedid_mapper.modulexml_url }}"
+        dest: "{{keycloak_home}}/modules/system/layers/keycloak/org/keycloak/{{ idp_hashedid_mapper.name }}/main/"
+
+    - name: Setup keycloak xml providers
+      xml:
+        path: "{{keycloak_home}}/standalone/configuration/standalone-ha.xml"
+        xpath: /srv:server/srv:profile/sub:subsystem/sub:providers
+        input_type: xml
+        add_children:
+          - "<provider>module:org.keycloak.{{ idp_hashedid_mapper.name }}</provider>"
+        namespaces:
+          srv: urn:jboss:domain:16.0
+          sub: urn:jboss:domain:keycloak-server:1.1
+
+  when: "{{idp_hashedid_mapper.enabled}} == true"
+  tags: "idp_hashedid_mapper_plugin"
+
+
 
 
 
