--- a/roles/keycloak/vars/main.yml
+++ b/roles/keycloak/vars/main.yml
@@ -5,3 +5,8 @@ keycloak_home: "{{ansible_user_dir}}/keycloak"
 
 keycloak_bind_address: "0.0.0.0"
 keycloak_bind_port: "8080"
+
+## cachetype should get one of the values: { distributed-cache, replicated-cache}. In case of replicated-cache, owners' value is ignored
+session:
+  cachetype: "distributed-cache"
+  owners: "2"
