--- a/roles/keycloak/vars/main.yml
+++ b/roles/keycloak/vars/main.yml
@@ -1,5 +1,7 @@
 ---
 
+## Variables below should not be changed, unless you know what you're doing
+
 keycloak_source_folder: keycloak_source
 keycloak_home: "{{ansible_user_dir}}/keycloak"
 
